--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@
 
 @font-face {
     font-family: eurofurence-regular;
-    src: url(../fonts/eurofurence-regular.ttf);
+    src: url(/fonts/eurofurence-regular.ttf);
 }
 
 @font-face {
